# DA-LCS

./: CMakeLists.txt  README.md  build.sh
src/: Params.hpp  concepts.h  drivers.h  eigenvectors.h  er3bpMapping.h  helicityIntegrator.h  integration.h  linearAlgebra.h  main.cpp  powerLaw.h  rhs.h
